--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,17 @@
   
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
-  <link rel="manifest" href="/site.webmanifest">
-
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
 </head>
-  <!--Ce site à été aider par IA pour optimisation-->
+  
 <body>
   
+  <form class="formulaire">
+      <input type="text" name="search" placeholder="Chercher un pokémon...">
+      <button type="submit">Search</button>
+  </form>
 
   </body>
   </html>
