--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <title>Prux - project</title>
+  <title>Pokemon</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta property="og:site_name" content="Case Study">
@@ -24,11 +24,19 @@
 </head>
   
 <body>
-  
+  <h1>Pokémon Search</h1>
   <form class="formulaire">
       <input type="text" name="search" placeholder="Chercher un pokémon...">
       <button type="submit">Search</button>
   </form>
+
+  <div>
+
+    <ul class="list">
+
+
+    </ul>
+  </div>
 
   </body>
   </html>
